2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_write_graph_graphml) : 
	added attribute handling

2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_create) : error message if 'number' 
	is out of range

	* examples/simple/graphml.c : updated

	* src/foreign-graphml.c (igraph_i_graphml_parser_state)
	(igraph_i_graphml_destroy_state)
	(igraph_i_graphml_sax_handler_start_element)
	(igraph_i_graphml_sax_handler_end_document)
	(igraph_i_graphml_sax_handler_start_document) : added edgeids
	(igraph_i_graphml_sax_handler_start_document) : trie should note keys

2006-08-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_lgl) : read isolates correctly

2006-08-11  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.[ch] : fixed Python interface
	* configure.in, interfaces/python/Makefile.am : better installation
	in Mac OS X (now works with Fink's Python installation as well)
	
2006-08-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* configure.in : modified to generate a proper makefile for
 	Intel-based Macs.
 	* interfaces/python/*.c : removed some unused variables

2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_read_graph_graphml) : remove
	'directed' attribute, (somewhat) better error handling, memory leaks
	corrected

	* src/iterators.c (igraph_vs_nonadj) : added
	(igraph_vs_destroy, igraph_vit_create) : added NONADJ type
	* examples/simple/igraph_vs_nonadj.c : added
	
2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_graphml, igraph_write_graph_graphml)
	: moved to src/foreign-graphml.c

	* src/foreign-graphml.c (igraph_read_graph_graphml) : added
	attribute handling, quite messy and contains known memory leaks

2006-08-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/conversion.c (igraph_to_directed) : 
	IGRAPH_TO_UNDIRECTED_COLLAPSE bug corrected