@@ -1,3 +1,14 @@
+2006-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/foreign-graphml.c (igraph_read_graph_pajek) : serious memory
+	leaks eliminated
+
+	* src/foreign.c (igraph_i_graphml_sax_handler_error)
+	(igraph_i_graphml_destroy_state) : some memory leaks eliminated
+
+	* src/interfaces/python/graphobject.c (igraphmodule_Graph_delete_edges)
+	: memory leak eliminated
+
 2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/foreign-graphml.c (igraph_write_graph_graphml) : 
